frontend/tests/cases/positive/interfaces/dependent-kinds/interfaceDependentCoeffectVarWithMethod.gr
interface DepKind a (c : Coeffect) (i : c) where
  dk : a [i] -> a
