frontend/tests/cases/negative/notInScopeInterfaceDependentKind.gr
-- there is no 'c' in scope
interface Simple (n : c) a
